--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>The Planet Earth</title>
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <main>
-    <div>
-      <img src="images/earth-horizon.jpg" alt="?">
-    </div>
-    <div>
-      <h1>The Planet Earth</h1>
-      <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
-    </div>
-    <div>
-      <a href="...">Book a star cruise</a>
+    <div class="wrapper">
+      <div>
+        <img class="wrapper" src="images/earth-horizon.jpg" alt="?">
+      </div>
+      <div>
+        <h1>The Planet Earth</h1>
+        <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+      </div>
+      <div>
+        <a href="...">Book a star cruise</a>
+      </div>
     </div>
   </main>
 </body>
