--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <main>
     <div class="wrapper">
       <div>
-        <img class="wrapper" src="images/earth-horizon.jpg" alt="?">
+        <img class="img-flex" src="images/earth-horizon.jpg" alt="?">
       </div>
-      <div>
-        <h1>The Planet Earth</h1>
-        <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
-      </div>
-      <div>
-        <a href="...">Book a star cruise</a>
+      <div class="grid grid-middle">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+          <h1 class="pad-t">The Planet Earth</h1>
+          <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+          <a class="btn btn-ghost" href="...">Book a star cruise</a>
+        </div>
       </div>
     </div>
   </main>
