--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <main>
     <div class="banner">
       <div>
-        <img class="img-flex" src="images/earth-horizon.jpg" alt="?">
+        <img class="img-flex push-0" src="images/earth-horizon.jpg" alt="?">
       </div>
-      <div class="banner-text">
+      <div class="banner-text gutter-1-2">
         <div class="grid grid-middle wrapper">
           <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
             <h1 class="pad-t">The Planet Earth</h1>
